Finally fixed media query for parallax on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ a {
     color: black;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 footer {
     background-color: #E9ECEF;
     text-align: center;
@@ -66,11 +70,10 @@ footer {
 
 .fa:hover {
     color: red;
-    text-decoration: none;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
     .parallax-1, .parallax-2, .parallax-3 {
-        display: none;
+        background-attachment: scroll;
     }
 }
